--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "iview": "^2.6.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
+    "vue-i18n": "^7.3.2",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
