--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "iview": "^2.6.0",
+    "iview-loader": "^1.0.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.3.2",
