--- a/package.json
+++ b/package.json
@@ -54,13 +54,15 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "image-type": "^3.0.0",
     "iview": "^2.6.0",
     "iview-loader": "^1.0.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.3.2",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "wallpaper": "^2.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
