--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "image-type": "^3.0.0",
     "iview": "^2.6.0",
     "iview-loader": "^1.0.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.3.2",
