--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-i18n": "^7.3.2",
+    "vue-masonry-css": "^1.0.0",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
     "wallpaper": "^2.6.0"
